test/success/std/coroutines/iterator/main.sk
module Main {

fn counter(end: Int) co(Int) -> () {
    for i in 0..end {
        yield i;
    }
    ()
}

fn main() {
    for i in co counter(10) {
        println(i);
    }
}

}
