test/errors/borrowcheck/loop/main.sk
module Main {

fn main() {
    for value in 0..10 {
        println("Value: ${value}");
    }
}

}
